# gst.wasm

./: .clang-format  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  index.html  pyproject.toml
gst.wasm/gst-plugins-web/: meson.build
gst.wasm/gst-plugins-web/gst/imagebitmap/: gstimagebitmapsrc.cpp
gst.wasm/gst-plugins-web/samples/: meson.build
gst.wasm/gst-plugins-web/samples/imagebitmap/: meson.build
gst.wasm/subprojects/gst-plugins-web/: README.md  meson.build
gst.wasm/subprojects/gst-plugins-web/ext/: meson.build
gst.wasm/subprojects/gst-plugins-web/ext/sdl2/: gstsdl2.c  gstsdl2elements.h  gstsdl2sink.c  meson.build
gst.wasm/subprojects/gst-plugins-web/gst/: meson.build
gst.wasm/subprojects/gst-plugins-web/gst-libs/gst/: meson.build
gst.wasm/subprojects/gst-plugins-web/gst-libs/gst/emscripten/: gstemscripten.c  gstemscripten.h  meson.build
gst.wasm/subprojects/gst-plugins-web/gst-libs/gst/web/: gstwebcanvas.c  gstwebcanvas.h  gstwebrunner.c  gstwebrunner.h  gstwebrunnertransfer.cpp  gstwebrunnertransfer.h  gstwebtask.c  gstwebtask.h  gstwebtaskpool.c  gstwebtaskpool.h  gstwebtransferable.cpp  gstwebtransferable.h  gstwebutils.c  gstwebutils.cpp  gstwebutils.h  gstwebvideoframe.cpp  gstwebvideoframe.h  meson.build
gst.wasm/subprojects/gst-plugins-web/gst/emhttpsrc/: gstemhttpsrc.c  meson.build
gst.wasm/subprojects/gst-plugins-web/gst/imagebitmap/: gstimagebitmapsrc.cpp  gstimagebitmapsrc.h  meson.build
gst.wasm/subprojects/gst-plugins-web/gst/web/: gstweb.c  gstweb.h  gstwebcanvassink.cpp  gstwebcanvassink.h  gstwebcanvassrc.cpp  gstwebcanvassrc.h  gstwebdownload.c  gstwebdownload.cpp  gstwebdownload.h  gstwebemfetchsrc.c  gstwebemfetchsrc.h  gstwebfetchsrc.c  gstwebfetchsrc.cpp  gstwebfetchsrc.h  gstwebstreamsrc.c  gstwebstreamsrc.cpp  gstwebstreamsrc.h  gstwebupload.cpp  gstwebupload.h  meson.build
gst.wasm/subprojects/gst-plugins-web/gst/web/codecs/: gstwebcodecs.cpp  gstwebcodecs.h  gstwebcodecsaudiodecoder.cpp  gstwebcodecsaudiodecoder.h  gstwebcodecsvideodecoder.cpp  gstwebcodecsvideodecoder.h
gst.wasm/subprojects/gst-plugins-web/gst/web/stream/: gstwebstreamreadersrc.cpp  gstwebstreamreadersrc.h
gst.wasm/subprojects/gst-plugins-web/gst/web/transport/: gstwebtransportsrc.cpp  gstwebtransportsrc.h  gstwebtransportstream.cpp  gstwebtransportstreamsrc.cpp  gstwebtransportstreamsrc.h
gst.wasm/subprojects/gst-plugins-web/gst/webcanvassrc/: gstwebcanvassrc.cpp  meson.build
gst.wasm/subprojects/gst-plugins-web/samples/: meson.build
gst.wasm/subprojects/gst-plugins-web/samples/emhttpsrc/: bs-config.js  emhttpsrc-example.c  meson.build
gst.wasm/subprojects/gst-plugins-web/samples/imagebitmap/: imagebitmap-example.c  main.c  meson.build
gst.wasm/subprojects/gst-plugins-web/samples/webcanvassrc/: meson.build  webcanvassrc-animation-example.c  webcanvassrc-webcam-example.c
gst.wasm/subprojects/samples/: README.md  html_generator.py  meson.build  template.html
gst.wasm/subprojects/samples/audio-decoder/: audio-decoder-example.c  meson.build
gst.wasm/subprojects/samples/audiotestsrc/: audioplayer.cpp  audiotestsrc-example.c  meson.build  utils.c  utils.h
gst.wasm/subprojects/samples/audiotestsrc/html/: index.html
gst.wasm/subprojects/samples/audiotestsrc/html/scripts/: index.js
gst.wasm/subprojects/samples/audiotestsrc/src/: audioplayer.cpp
gst.wasm/subprojects/samples/audiotestsrc/src/js/: index.js
gst.wasm/subprojects/samples/avdec+lcevc+aac/: avdec+lcevc+aac-example.c  meson.build
gst.wasm/subprojects/samples/ci/static/: index.html
gst.wasm/subprojects/samples/ci/static/web/: eslint.config.js  index.html  package-lock.json  package.json
gst.wasm/subprojects/samples/ci/static/web/src/: App.css  (+2 more)
gst.wasm/subprojects/samples/codecs/: codecs-example.c  meson.build
gst.wasm/subprojects/samples/codecs-avdec-h264/: codecs-avdec-h264-example.c  meson.build
gst.wasm/subprojects/samples/compositor/: compositor-example.c  meson.build
gst.wasm/subprojects/samples/dash/: dash-example-page.html  dash-example.c  meson.build
gst.wasm/subprojects/samples/emhttpsrc/: emhttpsrc-example.c  meson.build
gst.wasm/subprojects/samples/gl/: gl-example.c  meson.build
gst.wasm/subprojects/samples/gstinspect/: gst_private.h  gstinspect-example-page.html  gstinspect-example.c  gstinspect.c  gstinspect.h  gstregistry.h  meson.build  tools.h
gst.wasm/subprojects/samples/gstinspect/upstream-gstreamer/: glib-compat-private.h  gst_private.h  gstdatetime.h  gstdeviceprovider.h  gstelement.h  gstinfo.h  gstinspect.c  gstpad.h  gstplugin.h  gstregistry.h  gststructure.h  gsttoc.h  gsttracerutils.h  gsttypefind.h  tools.h
gst.wasm/subprojects/samples/gstlaunch/: gstlaunch-example.c  gstlaunch.c  index.html  meson.build
gst.wasm/subprojects/samples/gstlaunch/html/: index.html
gst.wasm/subprojects/samples/lcevc+aac/: lcevc+aac-example.c  meson.build
gst.wasm/subprojects/samples/lcevcdec/: lcevcdec-example.c  meson.build
gst.wasm/subprojects/samples/openal/: meson.build  openal-example.c
gst.wasm/subprojects/samples/scripts/: gen_page.py
gst.wasm/subprojects/samples/videotestsrc/: meson.build  videotestsrc-example.c
gst.wasm/subprojects/samples/webcanvassrc/: meson.build  webcanvassrc-animation-example.c  webcanvassrc-webcam-example.c
gst.wasm/subprojects/samples/webdownload/: meson.build  webdownload-example-page.html  webdownload-example.c
gst.wasm/subprojects/samples/webemfetchsrc/: meson.build  webemfetchsrc-example.c
gst.wasm/subprojects/samples/webfetchsrc/: bs-config.js  meson.build  webfetchsrc-example.c
gst.wasm/subprojects/samples/webstreamsrc/: meson.build  webstreamsrc-example.c
gst.wasm/subprojects/samples/webtransportsrc/: meson.build  webtransportsrc-example.c
gst.wasm/subprojects/samples/webtransportsrc-streams/: meson.build  webtransportsrc-streams-example-ref.html  webtransportsrc-streams-example.c
samples/: meson.build
samples/audiotestsrc/: index.html
samples/audiotestsrc/src/js/: index.js
samples/openal/: meson.build
samples/videotestsrc/: meson.build
(+59 files in other folders)
